Small fixes e cambiato repo ClassificationRuleRepository con campi (fields) configurabili da application.properties