@@ -1,7 +1,11 @@
 package it.coderit.banktestapp.repository;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.quarkus.hibernate.orm.panache.PanacheRepository;
@@ -9,9 +13,12 @@ import io.quarkus.hibernate.orm.panache.PanacheRepository;
 import it.coderit.banktestapp.model.Transaction;
 import it.coderit.banktestapp.model.ClassificationRule;
 import it.coderit.banktestapp.model.CenterType;
+import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -23,6 +30,21 @@ public class ClassificationRuleRepository implements PanacheRepository<Classific
     @Inject
     EntityManager em;
 
+    @ConfigProperty(name = "classification.transaction-fields")
+    List<String> configuratedFields;
+
+    private Map<String, Function<Transaction, String>> fieldsGetters;
+
+
+    @PostConstruct
+    void init() {
+        fieldsGetters = new HashMap<String, Function<Transaction, String>>();
+        fieldsGetters.put("remittanceInformation", Transaction::getRemittanceInformation);
+        fieldsGetters.put("creditorName", Transaction::getCreditorName);
+        fieldsGetters.put("debtorName", Transaction::getDebtorName);
+        fieldsGetters.put("additionalInformation", Transaction::getAdditionalInformation);
+    }
+
     /**
      * Trova il CenterType corrispondente a una transazione cercando le parole chiave delle regole
      * nei campi rilevanti della transazione (remittance information, creditor/debtor name, proprietary bank transaction code).
@@ -30,18 +52,18 @@ public class ClassificationRuleRepository implements PanacheRepository<Classific
      * @param transaction La transazione da classificare.
      * @return Un Optional contenente il CenterType se una regola corrisponde, altrimenti un Optional vuoto.
      */
-    public Optional<CenterType> findCenterByJeyWord(Transaction transaction) {
+    public Optional<CenterType> findCenterByKeyword(Transaction transaction) {
         List<ClassificationRule> allRules = listAll();
 
-        List<String> transactionFieldsToSerach = Stream.of(
-                transaction.getRemittanceInformation(),
-                transaction.getCreditorName(),
-                transaction.getDebtorName(),
-                transaction.getProprietaryBankTransactionCode())
-                .filter(java.util.Objects::nonNull)
-                .map(String::toLowerCase)
-                .toList();
-        log.debug("Valori della transazione da cercare: {}", transactionFieldsToSerach);
+        List<String> transactionFieldsToSerach = configuratedFields.stream()
+        .map(fieldName -> {
+            Function<Transaction, String> getter = fieldsGetters.get(fieldName);
+            if (getter != null) {
+                return getter.apply(transaction);
+            }
+            log.warn("Campo transazione {} configurato ma getter non trovato", fieldName);
+            return null;
+        }).filter(s -> s != null).map(String::toLowerCase).collect(Collectors.toList());
 
         for (ClassificationRule rule : allRules) {
             String ruleKeyword = rule.getKeyword().toLowerCase();
@@ -65,9 +87,6 @@ public class ClassificationRuleRepository implements PanacheRepository<Classific
     /**
      * Salva una nuova regola di classificazione se una regola con la stessa parola chiave (case-insensitive)
      * non esiste già.
-     *
-     * @param keyword La parola chiave della regola.
-     * @param center Il CenterType associato alla parola chiave.
      */
     public void saveIfNotExists(String keyword, CenterType center) {
         boolean exist = find("LOWER(keyword) = ?1", keyword.toLowerCase()).firstResultOptional().isPresent();
@@ -82,9 +101,6 @@ public class ClassificationRuleRepository implements PanacheRepository<Classific
 
     /**
      * Trova una regola di classificazione per la sua parola chiave.
-     *
-     * @param keyword La parola chiave da cercare.
-     * @return Un Optional contenente la ClassificationRule se trovata, altrimenti un Optional vuoto.
      */
     public Optional<ClassificationRule> findByKeyword(String keyword) {
         return find("LOWER(keyword) = ?1", keyword.toLowerCase()).firstResultOptional();
@@ -93,8 +109,6 @@ public class ClassificationRuleRepository implements PanacheRepository<Classific
 
     /**
      * Restituisce tutte le regole di classificazione presenti nel database.
-     *
-     * @return Una lista di tutte le ClassificationRule.
      */
     public List<ClassificationRule> findAllRegole() {
         return listAll();
